# zcd

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
docs/: matching-and-ranking.md
fuzzy/: Cargo.toml  README.md
fuzzy/src/: fzy.rs  lib.rs  matcher.rs  score.rs
scripts/: zcd.plugin.sh  zcd.plugin.zsh
zcd/: Cargo.toml
zcd/src/: main.rs
zcd/src/cli/: client.rs  mod.rs
zcd/src/config/: mod.rs
zcd/src/db/: data.rs  dir.rs  mod.rs
zcd/src/fuzzy/: fzy.rs  mod.rs  score.rs
zcd/src/server/: mod.rs  ops.rs
