[package]
name = "zcd"
version = "1.3.0"
authors = ["tizee"]
edition = "2021"
description = "A z-inspired directory jumper with typo-tolerant fuzzy matching"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version="3.1.9", features= [ "std","derive","color" ] }
dirs = "4.0.0"
itertools = "0.10.3"
fuzzy = {path = "../fuzzy"}


[dev-dependencies]
tempfile = "3.16.0"
